# remit-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.githooks/: pre-commit
.github/workflows/: acceptance.yml  ci.yml  release.yml
npm/: package.json  postinstall.js
pypi/: README.md  pyproject.toml
pypi/remit_cli/: __init__.py  __main__.py
snap/: snapcraft.yaml
src/: auth.rs  client.rs  completions.rs  config.rs  main.rs  output.rs  ows.rs  permit.rs  platform.rs
src/commands/: a2a.rs  address.rs  balance.rs  bounty.rs  config_cmd.rs  deposit.rs  escrow.rs  faucet.rs  fund.rs  history.rs  init.rs  mint.rs  mod.rs  pay.rs  sign.rs  signer.rs  status.rs  stream.rs  tab.rs  update.rs  wallet.rs  webhook.rs  withdraw.rs
src/signer/: daemon.rs  eip712.rs  integration_tests.rs  keyring.rs  keystore.rs  mod.rs  policy.rs  server.rs  tokens.rs
tests/: update_check.rs
tests/acceptance/: harness.rs  main.rs
