[package]
name = "remit-cli"
version = "0.4.0"
edition = "2021"
description = "CLI for the Remit payment protocol — USDC payments for AI agents"
license = "MIT"
repository = "https://github.com/remit-md/remit-cli"
homepage = "https://remit.md"
documentation = "https://remit.md/docs/cli"
keywords = ["usdc", "payments", "agents", "base", "blockchain"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
rust-version = "1.75"

[[bin]]
name = "remit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
thiserror = "1"
alloy = { version = "1", features = ["signers", "signer-local"] }
sha3 = "0.10"
rand = { version = "0.8", features = ["getrandom"] }
clap_complete = "4"
dotenvy = "0.15"
hex = "0.4"
dirs = "5"
aes-gcm = "0.10"
scrypt = "0.11"
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"
axum = "0.8"
toml = "0.8"
ows-lib = "1.1"
ows-core = "1.1"
hostname = "0.4"
comfy-table = "7"
chrono = { version = "0.4", features = ["serde"] }
url = "2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
