[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "remit-cli"
version = "0.5.4"
description = "CLI for the Remit payment protocol — USDC payments for AI agents"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["usdc", "payments", "agents", "base", "blockchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://remit.md"
Repository = "https://github.com/remit-md/remit-cli"

[project.scripts]
remit = "remit_cli.__main__:main"
